<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_token" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/copy_token"
                android:inputType="textPassword" />

            <Space
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/btnShowPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_button"
                    android:contentDescription="@string/search_text"
                    android:hint="@string/search_text"
                    android:onClick="buttonShowPasswordClick"
                    app:srcCompat="@android:drawable/ic_lock_idle_lock"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_weight="0" />

            </LinearLayout>
            <Space
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/border_button"
            android:onClick="onClick"
            android:text="@string/login" />



    </LinearLayout>

    <WebView
        android:id="@+id/wvGitHub"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>